[tool.poetry]
name = "rtvs-archiver"
version = "0.1.0"
description = ""
authors = ["Mathew Cohle <mathewcohle@protonmail.com>"]

[tool.poetry.scripts]
rtvs_archiver = "rtvs_archiver.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
requests = "^2.27.1"
lxml = "^4.7.1"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
